--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </div>
     <!-- start of icons part  -->
     <div class="icons-container">
-      <img src="./icon-1.png" alt="">
-      <img src="./icon-2.png" alt="">
-      <img src="./icon-3.png" alt="">
-      <img src="./icon-4.png" alt="">
+      <img src="https://user-images.githubusercontent.com/79800224/146986866-f079f7f2-d17f-4c87-bdb1-897aa4c166a7.png" alt="">
+      <img src="https://user-images.githubusercontent.com/79800224/146986856-6fc107ee-574d-4694-9378-cf543e3685c7.png" alt="">
+      <img src="https://user-images.githubusercontent.com/79800224/146986858-c9854024-ce7a-41e2-9ec7-ba7d8feb2452.png" alt="">
+      <img src="https://user-images.githubusercontent.com/79800224/146986859-c0629ff2-fc15-4226-af85-e3b8c817b9cb.png" alt="">
     </div>
     <!-- end of icons part  -->
     <script src="app.js"></script>
